--- a/client/components/tabs/tab.scss
+++ b/client/components/tabs/tab.scss
@@ -1,4 +1,16 @@
 
-.as-floor {
-    border: 1px solid #eee;
+.ac-tabs {
+    &-menu {
+
+    }
+
+    &-main {
+
+        &-items {
+
+            &-hide {
+                display: none;
+            }
+        }
+    }
 }
