'添加颜色选择组件'

--- a/client/components/fixer/index.scss
+++ b/client/components/fixer/index.scss
@@ -4,8 +4,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    padding: 10px 20px;
+    min-height: 20px;
     text-align: center;
-    border: 1px solid #ddd;
+    // border: 1px solid #ddd;
     background: #eeeeee;
 }
