--- a/client/components/floor/floor.scss
+++ b/client/components/floor/floor.scss
@@ -1,6 +1,6 @@
 
 .as-floor {
-    border: 1px solid #eee;
-    margin: 0 0 10px 0;
+    // border: 1px solid #eee;
     font-size: 0;
+    min-height: 20px;
 }
