--- a/client/src/components/banner/App.scss
+++ b/client/src/components/banner/App.scss
@@ -51,7 +51,7 @@ $padding: 20px;
             span {
                 font-size: 12px;
             }
-            .anticon {
+            .icon-font {
                 font-size: 16px;
                 margin-bottom: 2px;
             }
