--- a/client/src/components/control/control.scss
+++ b/client/src/components/control/control.scss
@@ -5,6 +5,8 @@
     width: 300px;
     height: 200px;
     z-index: 9999;
+    background: rgba(0, 0, 0, 0.2);
+    pointer-events: none;
 
     &-line {
         position: absolute;
