--- a/client/src/components/topMenu/App.scss
+++ b/client/src/components/topMenu/App.scss
@@ -60,4 +60,11 @@ $padding: 20px;
             }
         }
     }
+    &-list {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        z-index: 9999;
+    }
 }
