'添加用户名显示'

--- a/client/src/pages/lists/app.scss
+++ b/client/src/pages/lists/app.scss
@@ -75,11 +75,11 @@ body {
 
     &-imgWrap {
         &:hover {
-            .page-list-card-img {
-                animation-name: pulse;
-                animation-duration: .75s;
-                animation-fill-mode: both;
-            }
+            // .page-list-card-img {
+            //     animation-name: pulse;
+            //     animation-duration: .75s;
+            //     animation-fill-mode: both;
+            // }
         }
     }
 
