--- a/client/src/pages/lists/app.scss
+++ b/client/src/pages/lists/app.scss
@@ -60,10 +60,10 @@ body {
     background: #ffffff;
     border-radius: 4px;
     animation-duration: .75s;
-    box-shadow: 4px 4px 10px #eee;
+    box-shadow: 4px 4px 10px #ccc;
 
     &:hover {
-        border: 1px solid #8D8D8D;
+        box-shadow: 0px 2px 10px #333;
         .page-list-card-pendant {
             animation-name: margin;
             animation-duration: .75s;
