--- a/client/src/pages/lists/app.scss
+++ b/client/src/pages/lists/app.scss
@@ -87,6 +87,10 @@ body {
 
     }
 
+    &-search-text {
+        background: #0ABD40;
+    }
+
     &-type {
         float: right;
         width: 26px;
