--- a/client/src/components/panel/panel.scss
+++ b/client/src/components/panel/panel.scss
@@ -14,6 +14,7 @@
         height: 100%;
         transition: all .2s;
         z-index: 888;
+        margin-top: 51px;
 
         &-visible {
             right: 0;
