--- a/client/src/components/layerCake/layerCake.scss
+++ b/client/src/components/layerCake/layerCake.scss
@@ -1,10 +1,8 @@
 @import "../css/common.scss";
 
 .ec-editor-layer-cake {
-    @extend .ec-eidtor-layout-fixed;
-
     z-index: 888;
-    right: 0;
+    left: 0;
     width: 90px;
 
     &-title {
@@ -29,7 +27,5 @@
         }
     }
 
-    &-active {
-        right: 305px;
-    }
+    &-active {}
 }
