通用组件变换位置

--- a/client/src/components/css/common.scss
+++ b/client/src/components/css/common.scss
@@ -2,12 +2,11 @@
 /**
  * fixed 属性的编辑模块的通用样式
  */
-.ec-eidtor-layout-fixed {
-    //top: 50px;
+.ec-editor-layout-fixed {
     position: fixed;
     padding: 0;
-    background: #ededed;
-    box-shadow: -2px 0 6px -4px #999;
+    background: #fff;
+    box-shadow: 0 0 6px -4px #999;
     transition: all .2s;
     z-index: 888;
     opacity: 0.96;
