--- a/client/src/pages/editor/app.scss
+++ b/client/src/pages/editor/app.scss
@@ -18,3 +18,11 @@ body {
         margin: 0 auto;
     }
 }
+
+.ec-editor-canvas {
+    .ac-tabs {
+        &-title {
+            display: inline-block;
+        }
+    }
+}
