--- a/client/src/components/editor/editor.scss
+++ b/client/src/components/editor/editor.scss
@@ -22,3 +22,14 @@
         display: block;
     }
 }
+
+// .ec-editor-canvas {
+//     background-image: url('../../images/mobile.png');
+//     height: 900px;
+//     width: 440px;
+//     margin: 0 auto;
+//     background-repeat: no-repeat;
+//     &-inner {
+//         width: 345px;
+//     }
+// }
