--- a/client/src/components/panel/panel.scss
+++ b/client/src/components/panel/panel.scss
@@ -14,6 +14,7 @@ $layoutWidth: 300px;
     &-layout {
         @extend .ec-editor-layout-fixed;
 
+        overflow-y: auto;
         top: 50px;
         bottom: 0;
         right: -$layoutWidth;
