数据格式，编辑模式，组件配置 修改

--- a/client/components/mobile/list/list.scss
+++ b/client/components/mobile/list/list.scss
@@ -1,3 +1,23 @@
 .tmc-list {
-    
+    display: flex;
+    flex-flow: row wrap;
+    align-content: flex-start;
+
+    &-cols-2 {
+        .tmc-img {
+            flex: 0 0 50%;
+        }
+    }
+
+    &-cols-3 {
+        .tmc-img {
+            flex: 0 0 33.3%;
+        }
+    }
+
+    &-cols-4 {
+        .tmc-img {
+            flex: 0 0 25%;
+        }
+    }
 }
