--- a/client/src/components/layerCake/layerCake.scss
+++ b/client/src/components/layerCake/layerCake.scss
@@ -17,6 +17,10 @@
         margin-bottom: 5px;
         cursor: pointer;
 
+        span {
+            pointer-events: none;
+        }
+
         &-sub {
             margin-bottom: 0;
             margin-left: 4px;
