--- a/client/src/css/common.scss
+++ b/client/src/css/common.scss
@@ -1,4 +1,3 @@
-
 /**
  * fixed 属性的编辑模块的通用样式
  */
@@ -10,6 +9,7 @@
     transition: all .2s;
     z-index: 888;
     opacity: 0.96;
+    top: 0;
 
     &-title {
         position: relative;
