--- a/client/src/pages/editor/app.scss
+++ b/client/src/pages/editor/app.scss
@@ -1,5 +1,25 @@
 @import "../../../style/reset.css";
 
+::-webkit-scrollbar-track
+{
+    border-radius: 6px;
+    background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar
+{
+    width: 6px;
+    background-color: #f9f9f9;
+}
+
+::-webkit-scrollbar-thumb
+{
+    border-radius: 6px;
+    -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .5);
+    background-color: #999;
+}
+
+
 body {
     margin: 0;
     padding: 0;
@@ -34,14 +54,18 @@ body {
     }
 }
 
+/**
+ * mobile 画布配置
+ */
 .ec-editor-mobile {
 
     .ec-editor-canvas-inner {
-        background: #eee;
+        background: #fff;
         width: 750px;
         min-height: 400px;
         transform-origin: 50% 0;
         transform: scale(0.5);
+        box-shadow: 0px 0px 14px 0 #666;
     }
 }
 
