--- a/client/src/pages/lists/app.scss
+++ b/client/src/pages/lists/app.scss
@@ -61,6 +61,7 @@ body {
     border-radius: 4px;
     animation-duration: .35s;
     box-shadow: 4px 4px 10px #ccc;
+    position: relative;
 
     &:hover {
         box-shadow: 0px 2px 10px #333;
@@ -119,12 +120,13 @@ body {
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
-            width: 190px;
+            width: 160px;
             text-align: left;
             cursor: pointer;
         }
         &-right {
             float: right;
+            margin-left: 20px;
         }
     }
 
@@ -173,5 +175,14 @@ body {
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
         margin-left: $tipMargin;
+    }
+    &-pushed {
+        border: 1px solid red;
+    }
+    &-progress {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
     }
 }
