--- a/client/src/components/menu/app.scss
+++ b/client/src/components/menu/app.scss
@@ -9,4 +9,8 @@ $padding: 20px;
     line-height: 50px;
     display: inline-block;
     z-index: 9999;
+    display: block;
+}
+.hide{
+    display: none;
 }
