--- a/client/src/pages/editor/app.scss
+++ b/client/src/pages/editor/app.scss
@@ -31,7 +31,6 @@ body {
 .ec-editor-canvas {
     position: relative;
     z-index: 1;
-
     &-inner {
         overflow: hidden;
         margin: 0 auto;
@@ -102,6 +101,9 @@ body {
     .ec-panel-title {
         background: #2D2D32;
         color: #DEDEE0;
+        font-size: 16px;
+        height: 44px;
+        line-height: 44px;
     }
     .ec-editor-pub-comps-items {
         height: 80px;
@@ -110,7 +112,13 @@ body {
     .ec-editor-layer-cake-index {
         background: none;
         text-align: center;
+        height: 14px;
+        width: 14px;
+        font-size: 12px;
+        border: 1px solid;
+        margin-left: 4px;
     }
+
     .ec-editor-layer-cake-title {
         background: #2D2D32;
         height: 44px;
@@ -124,6 +132,9 @@ body {
     .ec-editor-basic-props label {
         display: block;
     }
+    .ec-editor-basic-props button{
+        margin-top: 8px;
+    }
     .ec-editor-menu {
         width: 170px;
         height: 300px;
@@ -134,14 +145,14 @@ body {
         border-radius: 20px;
     }
     .ant-btn-sm {
-        width: 150px;
+        width: 120px;
         height: 60px;
         font-size: 16px;
         background: none;
         border: none;
-        color: #fff;
+        color: #DEDEE0;
         text-align: left;
-        padding-left: 50px;
+        margin-left: 20px;
     }
     .ant-btn:hover,
     .ant-btn:focus,
@@ -167,8 +178,8 @@ body {
     .ec-editor-layer-cake-content:hover {
         background: #2D3035;
     }
-    .ec-editor-layer-cake-index{
-        height: 20px;
+    .ec-editor-layout-fixed{
+        opacity: 1;
     }
     .menu-button{
         position: fixed;
@@ -188,33 +199,53 @@ body {
     }
     .show-right{
         position: fixed;
-        left: 62px;
+        left: 56px;
         top: 476px;
         z-index: 999;
         width: 48px;
         height: 48px;
         border-radius: 50%;
         text-align: center;
+        background: #212125;
         .anticon-right:before{
             font-size: 24px;
             color: #8E8E94;
             line-height: 44px;
+            padding-left: 8px;
         }
+    }
+    .closeRight{
+        transform: rotate(180deg);
     }
     input[type="text"] {
         border: 1px solid #2D2D32;
         padding: 3px 5px;
         background: #2D2D32;
+        color: #8E8E94;
+    }
+    .ec-panel-layout button{
+        background: #2D2D32;
+        color: #8E8E94;
+        border: 1px solid #2d2d32;
+    }
+    .ec-editor-basic-props label {
+        margin-bottom: 4px;
+        margin-top: 4px;
     }
     .ec-panel-layout-visible {
         background: #212125 100%;
         font-size: 14px;
     }
+    .ec-panel-title-text{
+        padding: 0 5px 5px 20px;
+    }
+    .ec-panel-close {
+        margin-top: -21px;
+    }
     .ant-select-selection--single,
     .ec-edit-border-color,
     .ant-input-number,
     .ant-input-number-input,
-    .ant-btn,
     .ant-btn-small{
         background: #2D2D32;
         border: 1px solid #2D2D32;
